# NagaAgent

./: .gitignore  LICENSE  MESSAGE_BUILDING_UNIFICATION.md  README.md  README_en.md  README_tw.md  TEST_README.md  Word_Agent_Integration_README.md  build.py  check_env.py  config.json  config.json.example  config.py  config_live2d_example.json  config_manager.py  conversation_core.py  debug_api_response.py  debug_request_headers.py  hourglass_question_mark.py  main.py  main.spec  pyproject.toml  quick_deploy_mac.sh  requirements.txt  sandglass_pattern.py  setup.bat  setup.ps1  setup.py  setup.sh  setup_mac.sh  simple_test.py  start.bat  start.sh  start_mac.sh  start_with_tray.bat  start_with_tray.command  tatus  test_full_flow.py  test_mcp_flow.py  test_services.py  (+3 more)
MoeChat-main/: LICENSE  README.md  chat_core.py  chat_server.py  chat_server_with_web.py  client-requirements.txt  client_cli.py  config.yaml  emotion_engine.py  emotion_readme.md  emotion_state.json  external_server.py  requirements.txt
agent/: README.md  __init__.py  api_server.py  image_processor.py  plugin_manager.py  preprocessor.py  start_server.py
agentserver/: README.md  SESSION_MANAGEMENT_UPGRADE.md  __init__.py  agent_manager.py  agent_server.py  computer_use_scheduler.py  config.py  multi_agent_coordinator.py  parallel_executor.py  task_deduper.py  task_planner.py  task_scheduler.py  task_scheduler_example.py  toolkit_manager.py
apiserver/: README.md  __init__.py  api_server.py  capability_manager.py  llm_service.py  message_manager.py  prompt_logger.py  result_notifier.py  start_server.py  streaming_tool_extractor.py  test_stream_split.py  tool_call_utils.py
game/: README.md  REQUIREMENTS.md  __init__.py  config.json.example  core_validation.py  full_flow_test.py  minimal_test.py  naga_game_system.py  simple_test.py
logs/: __init__.py  log_context_parser.py
mcpserver/: README_MULTI_AGENT.md  __init__.py  agent_manager.py  agent_manager_README.md  agent_registry.py  mcp_manager.py  mcp_registry.py  mcp_scheduler.py  mcp_server.py  multi_agent_coordinator.py  multi_agent_demo.py  task_executor.py  task_planner.py  test_mcp_schedule.py  tool_call_utils.py
mqtt_tool/: README.md  __init__.py  device_switch.py  requirements.txt
prompts/: conversation_analyzer_prompt.txt  mcp_result_summarizer_prompt.txt
speech_input/: README.md  SPEECH_INPUT_GUIDE.md  __init__.py  example_usage.py  requirements.txt  speech_input_manager.py  test_speech_input.py  windows_speech_input.py
summer_memory/: DECOUPLING_SUMMARY.md  docker-compose.template.yml  entity_map.json  extractor_ds_tri.py  graph.py  main.py  memory_manager.py  quintuple_extractor.py  quintuple_graph.py  quintuple_rag_query.py  quintuple_visualize.py  quintuple_visualize_v2.py  rag_query_tri.py  readme.md  task_manager.py  triples.json  visualize.py
system/: README.md  background_analyzer.py  config.py  config_manager.py  conversation_core.py  prompt_repository.py  system_checker.py
thinking/: QUICK_MODEL_GUIDE.md  README.md  __init__.py  config.py  difficulty_judge.py  genetic_pruning.py  preference_filter.py  quick_model_manager.py  thinking_node.py  thread_pools.py  tree_thinking.py
ui/: README.md  README_UPGRADE.md  document_tool.py  elegant_settings_widget.py  enhanced_worker.py  live2d_side_widget.py  message_renderer.py  progress_widget.py  pyqt_chat_window.py  response_utils.py  settings_api_config.py  stream_manager.py  title_bar.py
ui/utils/: lazy.py  (+7 more)
uploaded_documents/: 1760035399_Naga摘要.docx
voice/: AUDIO_PLAYBACK_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MOECHAT_TTS_REFACTOR.md  README.md  __init__.py  audio_player.py  local_voice_integration.py  server.py  start_voice_service.py  test_moechat_tts.py  tts_handler.py  tts_handler.py.archieve  tts_wrapper.py  unified_voice_manager.py  voice_hybrid_integration.py  voice_integration.py  voice_integration.py.archieve  voice_intergration.py.archieve  voice_status.py  voice_thread_safe_simple.py  websocket_edge_tts.py
(+329 files in other folders)
