[project]
name = "nagaagent"
version = "4.0.0"
description = "NagaAgent 4.0 - 智能对话助手，支持多MCP服务、流式语音交互、GRAG知识图谱记忆系统、RESTful API接口、控制台托盘功能"
authors = [
    {name = "柏斯阔落", email = "1781393885@qq.com"},
]
readme = "README.md"
requires-python = ">=3.11,<3.12" 
dependencies = [
    # 核心依赖 (已整合到nagaagent-core)
    "nagaagent-core>=1.0.5",
    # GRAG知识图谱相关依赖
    "py2neo>=2021.2.3",
    "pyvis>=0.3.2",
    "matplotlib>=3.10.0",
    "neo4j",
    # 网络通信相关依赖
    "librosa",
    "accelerate",
    "torch",
    # GUI界面相关依赖
    "PyQt5>=5.15.10",
    # 系统控制相关依赖
    "pycaw>=20240210", # 音量控制（Windows）
    "comtypes>=1.2.0", # COM支持（Windows）
    "screen-brightness-control>=0.21.0", # 屏幕亮度控制
    # 音频处理相关依赖
    "sounddevice>=0.4.6",
    "pyaudio>=0.2.14",
    "edge-tts>=7.0.2",
    "emoji>=2.8.0",
    # 系统托盘相关依赖
    "pystray>=0.19.4",
    # MCP工具相关依赖
    "jmcomic>=2.6.5",
    "fastmcp>=2.11.2",
    # MQTT通信相关依赖
    "paho-mqtt>=2.0.0",
    # 其他工具依赖
    "tiktoken",
    "python-docx>=1.2.0",
    "onnxruntime",
    # Live2D相关依赖
    "live2d-py>=0.5.4",
    "pyopengl>=3.1.10",
    "toml>=0.10.2",
    "opensimplex>=0.4.5.1",
    # 搜索工具依赖
    "langchain-community>=0.3.29",
    # 可选Agent所需依赖
    "playwright>=1.52.0", # 浏览器自动化Agent
    "bilibili-api-python", # Bilibili 视频Agent
    "langchain-openai>=0.3.34",
    "crawl4ai>=0.7.4",
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.13",
    "opencv-python>=4.12.0.88",
    "gui-agents>=0.3.0",
]

# 可选依赖组
[project.optional-dependencies]
#其余依赖组已经整合进入主依赖项
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["apiserver","mcpserver","mqtt_tool", "agent", "summer_memory", "thinking", "ui", "voice" ]

[tool.ruff]
line-length = 120 

