[project]
name = "nagaagent"
version = "4.0.0"
description = "NagaAgent 4.0 - 智能对话助手，支持多MCP服务、流式语音交互、GRAG知识图谱记忆系统、RESTful API接口、控制台托盘功能"
authors = [
    {name = "柏斯阔落", email = "1781393885@qq.com"},
]
readme = "README.md"
requires-python = ">=3.11,<3.12" 
dependencies = [
    # 先装个pyqt5避免奇葩依赖
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.0",
    # 核心依赖 (已整合到nagaagent-core)
    "nagaagent-core>=1.0.9",
    "simpleaudio",
    "pydub",
    "onnxruntime>=1.23.2",
    "sounddevice>=0.5.3",
    "pyautogui>=0.9.54",
    "librosa>=0.11.0",
    "pystray>=0.19.5",
    "paho-mqtt>=2.1.0",
    "bilibili-api>=4.1.0",
]

# 可选依赖组
[dependency-groups]
#其余依赖组已经整合进入主依赖项
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]
build = [
    "pyinstaller",
    "python_docx>=1.2.0",
    "fastmcp>=2.12.5",
    "tensorboard>=2.20.0",
    "expecttest>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["apiserver","mcpserver","mqtt_tool", "agent", "summer_memory", "thinking", "ui", "voice" ]

[tool.ruff]
line-length = 120 

